# imscriber

./: .gitignore  README.md  __main__.py  pyproject.toml
src/imscriber/: __main__.py
src/imscriber/modelfiles/: llava-llama3-imscriber_Modelfile  llava-llama3-promptRewriter_Modelfile
