[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imscriber"
version = "0.1"
dependencies = [
  "pillow==11.0.0",
  "ollama==0.4.7"
]

[project.scripts]
imscriber = "imscriber.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

